# PyrePortal

./: .env.development  .env.example  .env.production  .gitignore  .prettierignore  CLAUDE.md  DEVICE_MULTI_SUPERVISOR_IMPLEMENTATION.md  LICENSE  PROJECT_DOCUMENTATION.md  PYREPORTAL_MVP_GUIDE.md  RASPBERRY_PI_DEPLOYMENT_GUIDE.md  RASPBERRY_PI_DEPLOYMENT_OVERVIEW.md  README.md  RFID_IMPLEMENTATION_GUIDE.md  UI_DESIGN_SYSTEM_FLO.md  WORKING_KIOSK_SETUP.md  devbox.json  docker-build-pi.sh  eslint.config.js  index.html  lefthook.yml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  prettier.config.js  sonar-project.properties  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: refactoring-specialist.md  test-engineer.md  typescript-expert.md
.claude/hooks/: check-commit-message.sh  format-typescript.sh  lint-fix.sh
.claude/rules/: github-labels.md  hardcoded-credentials.md  no-production-requests.md  no-test-modifications.md  release.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-gkt.yml  build-production.yml  build.yml  code-quality.yml  codeql.yml  deploy-gkt.yml  lint.yml  main.yml  release.yml  security.yml  sonarcloud.yml  test.yml  version-check.yml
.husky/: pre-push
docs/: Installation Guide on Pi.txt  command-cheatsheet.md  logging-guidelines.md  performance-testing.md  pi4-native-build.md  pi5-native-build.md  pyreportal-project-documentation.md  raspberry-pi-deployment.md  store-logging-guide.md  wedge-reader-setup.md
docs/plans/: 2025-12-28-rfid-cognitive-complexity-design.md  2026-01-07-pn5180-driver-design.md  2026-01-07-pn5180-implementation-plan.md
openspec/: project.md
public/: system.js
rfid-scanner-demo/: Cargo.toml
rfid-scanner-demo/src/: main.rs
screenshots/: README.md  capture.spec.ts  tags.ts
scripts/: README.md  build-on-pi.sh  check-version.sh  configure-acr1552u.py  dev-run.sh  pi-setup.sh
src/: App.css  App.tsx  CLAUDE.md  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  CLAUDE.md  Cargo.toml  tauri.conf.json  test_pn5180.sh  test_rfid.sh  test_rfid_persistent.sh
src-tauri/examples/: rfid_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  auth.rs  cache.rs  config.rs  lib.rs  logging.rs  main.rs  rfid.rs  rfid_logging.rs  rfid_mfrc522.rs  rfid_pn5180.rs  rfid_pn5180_defs.rs  rfid_trait.rs  session_storage.rs  student_cache.rs
src-tauri/src/rfid/: interface.rs  mock.rs  mod.rs  raspberry_pi.rs
src/components/: CLAUDE.md  InfoModal.tsx  LastSessionToggle.test.tsx  LastSessionToggle.tsx  PendingScanModal.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx  RfidScanModal.tsx  RfidServiceInitializer.test.tsx  RfidServiceInitializer.tsx  ScreenDimmer.test.tsx  ScreenDimmer.tsx  animated-background.tsx  background-wrapper.tsx
src/dev/: mockScanSource.ts
src/hooks/: useEntityFetching.ts  useFrozenSortOrder.test.ts  useFrozenSortOrder.ts  useHomeViewHandlers.ts  useIdleTimer.test.ts  useIdleTimer.ts  useModalTimeout.test.ts  useModalTimeout.ts  useNetworkStatus.store.test.ts  useNetworkStatus.test.ts  useNetworkStatus.ts  usePagination.test.ts  usePagination.ts  useRfidScanning.test.ts  useRfidScanning.ts  useSchoolName.test.ts  useSchoolName.ts  useStudentFilter.test.ts  useStudentFilter.ts  useTagAssignment.ts  useTagAssignmentScan.test.ts  useTagAssignmentScan.ts
src/pages/: ActivityScanningPage.test.tsx  ActivityScanningPage.tsx  AttendancePage.tsx  CheckInOutPage.tsx  CreateActivityPage.statusCode.test.tsx  CreateActivityPage.test.tsx  CreateActivityPage.tsx  HomeViewPage.sessionRecreation.test.tsx  HomeViewPage.test.tsx  HomeViewPage.tsx  LandingPage.test.tsx  LandingPage.tsx  LoginPage.tsx  NFCScanningPage.tsx  PinPage.test.tsx  PinPage.tsx  RoomSelectionPage.sessionLifecycle.test.tsx  RoomSelectionPage.statusCode.test.tsx  RoomSelectionPage.test.tsx  RoomSelectionPage.tsx  (+11 more)
(+147 files in other folders)
