[package]
name = "pyreportal"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "pyreportal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pyreportal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time", "rt", "rt-multi-thread", "sync"] }
rand = "0.8"
dotenvy = "0.15"

# RFID scanner dependencies - only for Raspberry Pi (ARM/ARM64 Linux)
[target.'cfg(all(any(target_arch = "aarch64", target_arch = "arm"), target_os = "linux"))'.dependencies]
mfrc522 = { version = "0.8.0", features = ["eh02"] }
rppal = "0.14.1"
embedded-hal = "0.2.7"
linux-embedded-hal = "0.3.2"

[[bin]]
name = "rfid_test"
path = "src/bin/rfid_test.rs"

