[package]
name = "pyreportal"
version = "1.3.3"
description = "NFC-basiertes Kiosk-Terminal für die digitale Ganztagsbetreuung"
authors = ["Yannick Wenger <kontakt@moto.nrw>"]
edition = "2021"
default-run = "pyreportal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pyreportal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tauri = { version = "2", features = ["test"] }
